Fix for announcement bleeding out to the next view for wider images.

--- a/apps/Announcements/index.scss
+++ b/apps/Announcements/index.scss
@@ -47,6 +47,7 @@
   .Announcement-visuals > img {
     width: auto;
     height: 100%;
+    max-width: 100%;
   }
 
   .Announcement-content {
